Fixed credit modal and white spacing issues; testing the footer

--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -1,37 +1,39 @@
 @use "../variables" as *;
 
 footer {
-  position: absolute;
-  bottom: 0;
-  right: 50%;
-  transform: translateX(50%);
-  width: 85%;
-  max-width: 17.5rem;
-  ul {
-    display: flex;
-    justify-content: space-around;
-  }
-  li:hover,
-  li:focus-visible,
-  li:active {
-    color: $colorPrimary;
-    outline: none;
-  }
-  p {
-    font-size: 0.75rem;
-    text-align: center;
-    font-family: $fontSecondary;
-    text-transform: uppercase;
-    margin: 0.5rem 0;
+  .credits {
+    position: absolute;
+    bottom: 0;
+    right: 50%;
+    transform: translateX(50%);
+    width: 85%;
+    max-width: 17.5rem;
+    ul {
+      display: flex;
+      justify-content: space-around;
+    }
+    li:hover,
+    li:focus-visible,
+    li:active {
+      color: $colorPrimary;
+      outline: none;
+    }
+    p {
+      font-size: 0.75rem;
+      text-align: center;
+      font-family: $fontSecondary;
+      text-transform: uppercase;
+      margin: 0.5rem 0;
+    }
+    button {
+      font-family: $fontSecondary;
+      text-transform: uppercase;
+      color: $colorPrimary;
+    }
   }
   a {
     color: $colorPrimary;
     text-decoration: none;
-  }
-  button {
-    font-family: $fontSecondary;
-    text-transform: uppercase;
-    color: $colorPrimary;
   }
   .creditsModal {
     position: fixed;
@@ -46,10 +48,12 @@ footer {
     visibility: hidden;
     transition: 0.4s;
     border: 4px solid $colorDark1;
+    width: 95%;
+    overflow-y: auto;
+    max-height: 90%;
     button {
-      position: absolute;
-      right: 1rem;
-      top: 1rem;
+      position: relative;
+      left: 94%;
       color: $colorDark1;
     }
     button:hover,
@@ -58,6 +62,7 @@ footer {
       color: $colorPrimary;
     }
     ul {
+      display: flex;
       flex-direction: column;
     }
     li {
@@ -75,8 +80,23 @@ footer {
   }
 }
 
+@media (min-width: 445px) {
+  footer .creditsModal button {
+    position: absolute;
+    left: auto;
+    right: 1rem;
+    top: 1rem;
+  }
+}
+
+@media (min-height: 435px) {
+  footer .creditsModal {
+    // overflow-y: auto;
+  }
+}
+
 @media (min-width: 775px) and (min-height: 625px) {
-  footer {
+  footer .credits {
     left: 2.25rem;
     transform: none;
     width: 32%;
@@ -95,10 +115,24 @@ footer {
       color: $colorLight1;
     }
   }
+  footer .creditsModal {
+    width: 70%;
+  }
 }
 
-@media (min-width: 985px), (min-width: 775px) and (min-height: 765px) {
+@media (min-width: 825px) and (min-height: 625px) {
   footer {
+    width: auto;
+  }
+  // .creditsModal button {
+  //     position: absolute;
+  //     left: auto;
+  //     right: 1rem;
+  //     top: 1rem;
+  // }
+}
+@media (min-width: 985px), (min-width: 775px) and (min-height: 765px) {
+  footer .credits {
     left: auto;
     right: 2.25rem;
     width: auto;
